[metadata]
name = ghr3pos
version = attr: ghr3pos.__version__
author = ian hundere
author_email = ianhundere@gmail.com

[options]
py_modules = ghr3pos
python_requires = >=3.6
install_requires = requests >=2.0,<3.0

[options.extras_require]
test =
    pytest
    pytest-vcr
    pytest-cov

[options.entry_points]
console_scripts =
    ghr3pos = ghr3pos.application:main
